# incident_intelligence

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.json  environment.yaml  etl.ipynb  offset.txt  pyproject.toml  requirements.txt
Assets/: 1.excalidraw  Architecture.excalidraw  SocrataAPI.excalidraw
pipeline/blocks/: make_dbt_cli_bigquery_target_block.py  make_dbt_cli_profile_block.py  make_dbt_core_block.py  make_docker_container.py  make_gcp_credentials.py  make_gcs_bucket.py  make_github_repo_block.py  make_json_block.py
pipeline/deployment/: infra-docker-storage-docker.yaml  infra-docker-storage-github.yaml  infra-local-storage-github.yaml  infra-local-storage-local.yaml
pipeline/flows/: dbt_flow.py  extract_flow.py  infra-docker-storage-docker_deployment.py  infra-docker-storage-github_deployment.py  infra-docker-storage-local_deployment.py  infra-local-storage-github_deployment.py  infra-local-storage-local_deployment.py  load_bigquery_flow.py  load_gcs_flow.py  offset.txt  parent_etl_flow.py  test.md  update_file_if_exists_in_gcs.py  update_gcb_flow.py
pipeline/tasks/: augment_data.py  check_existing_files_in_gcb.py  common_files_names.py  download_common_files_gcb.py  fetch_data_api.py  remove_downloaded_files_gcb.py
prefect/blocks/: make_gcp_credentials.py  make_gcs_bucket.py  test.py
prefect/flows/: etl.py  extract_flow.py  load_gcs_flow.py  parent_etl_flow.py  update_gcb_flow.py
prefect/tasks/: augment_data.py  check_existing_files_in_gcb.py  check_recently_modified_files.py  (+4 more)
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
transform_dbt/: dbt_project.yml
(+13 files in other folders)
