[tool.poetry]
name = "incident-intelligence"
version = "0.1.0"
description = "A data pipeline utilizing ELT (Extract, Load, Transform) process to fetch San Francisco Police Department incident data"
authors = ["Ram Krishna Singh <rkscodes@gmail.com>"]
license = "Apache License"
readme = "README.md"
packages = [{include = "incident_intelligence"}]

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.10.4"
pandas = "^2.0.0"
sodapy = "^2.2.0"
prefect-gcp = "^0.4.0"
google-cloud-bigquery = "^3.9.0"
black = "^23.3.0"
isort = "^5.12.0"
dbt-core = "^1.4.5"
dbt-bigquery = "^1.4.3"
prefect-dbt = {extras = ["cli"], version = "^0.3.1"}

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.4"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.17.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
